# realtime-fraud-detection

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  mlflow.db  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
config/: config.yaml
docs/: architecture.md
docs/specs/: 2026-06-25-fraud-detection-design.md
models/: anomaly.pkl  metadata.json  model.pkl
reports/: metrics.json
src/fraud/: __init__.py  anomaly.py  config.py  dataset.py  drift.py  evaluate.py  explain.py  features.py  generator.py  train.py
src/fraud/api/: main.py  schemas.py
src/fraud/stream/: scorer.py  source.py
tests/: test_api.py  test_drift.py  test_features.py  test_generator.py  test_smoke.py  test_stream.py  test_train.py
